tests/snapshots/examples_fixtures/type_system__TypeSystem__Hof.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/Hof.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.Hof` doesn't match file path `examples/type_system/TypeSystem/Hof.flx`.

  examples/type_system/TypeSystem/Hof.flx:1:1
  |
1 | module TypeSystem.Hof {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
